--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
    <h1>Corprate Info(企業概要)</h1>
    <div class="navi">
     <ul>
-     <li><a href="../index.html">Home</a></li>
+     <li><a href="https://shinnihonsenni.github.io/shinnihonseni.gihub.io/">Home</a></li>
      <li><a href="">Products<span class="caret"></span></a>
       <div>
         <ul>
@@ -26,9 +26,9 @@
         </ul>
       </div>
      </li>
-     <li><a href="../machinery/machinery.html">Machinery</a></li>
-     <li><a href="../contact us/contact.html">Contact us</a></li>
-     <li><a href="../corporate info/info.html">Corporate Info</a></li>
+     <li><a href="https://shinnihonsenni.github.io/machinery.github.io/">Machinery</a></li>
+     <li><a href="https://shinnihonsenni.github.io/contact-us.github.io/">Contact us</a></li>
+     <li><a href="index.html">Corporate Info</a></li>
    </ul>
    </div>
    </header>
